# MM-Pro014

./: 10Num.cpp  10prim.cpp  Abisiesto.cpp  Asc.cpp  CMakeLists.txt  CalificacionN.cpp  ConsV.cpp  Descuento.cpp  Div.cpp  Entp.cpp  Factorial.cpp  FibonacciFor.cpp  FibonacciWhile.cpp  INum.cpp  MENU.cpp  Mc.cpp  Media-1.cpp  Media.cpp  Mul5y7.cpp  Multi.cpp  Nacimiento.cpp  Nmayor.cpp  NumPri.cpp  PN0.cpp  Par2.cpp  ParImpar.cpp  Produc10.cpp  Sprim.cpp  Sum100.cpp  Tpar.cpp  Triangulo.cpp  lim.cpp  sumneg.cpp
