cmake_minimum_required(VERSION 3.30)
project(untitled13)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled13 PN0.cpp)
add_executable(ParImpar ParImpar.cpp)
add_executable(Nmayor Nmayor.cpp)
add_executable(Abisiesto Abisiesto.cpp)
add_executable(ConsV ConsV.cpp)
add_executable(NumPri NumPri.cpp)
add_executable(Nacimiento Nacimiento.cpp)
add_executable(Mul5y7 Mul5y7.cpp)
add_executable(CalificacionN CalificacionN.cpp)
add_executable(Descuento Descuento.cpp)
add_executable(Asc Asc.cpp)
add_executable(lim lim.cpp)
add_executable(sumneg sumneg.cpp)
add_executable(Fibonacci FibonacciWhile.cpp)
add_executable(Mc Mc.cpp)
add_executable(Tpar Tpar.cpp)
add_executable(Media Media.cpp)
add_executable(Media-1 Media-1.cpp)
add_executable(INum INum.cpp)
add_executable(10Num 10Num.cpp)
add_executable(Product10 Produc10.cpp)
add_executable(Par2 Par2.cpp)
add_executable(Multi Multi.cpp)
add_executable(Entp Entp.cpp)
add_executable(Factorial Factorial.cpp)
add_executable(Sprim Sprim.cpp)
add_executable(Triangulo Triangulo.cpp)
add_executable(FibonacciFor FibonacciFor.cpp)
add_executable(Sum100 Sum100.cpp)
add_executable(Div Div.cpp)
add_executable(10prim 10prim.cpp)
add_executable(MENU MENU.cpp)
